<resources>
    <string name="app_name">Estacionamientos</string>
    <string name="action_settings">Settings</string>
    <string name="action_menu">Menu</string>
    <string name="mainActivity">Estacionamientos</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="btnRecorrido">Iniciar recorrido</string>
    <string name="btnPuntoIntermedio">Ingresar punto interes</string>
    <string name="btnCrearRecorrido">Crear recorrido</string>
    <string name="title_activity_iniciar_recorrido">Iniciar recorrido</string>

    <string name="prompt_titulo">Titulo</string>
    <string name="prompt_descripcion">Descripción</string>
    <string name="prompt_codigo_est">Codigo de estacionamiento</string>
    <string name="guardar_recorrido">Inicio de recorrido</string>
    <string name="error_titulo_requerido">El titulo es requerido</string>
    <string name="error_descripcion_requerido">La descripción es requerida</string>
    <string name="guardar_punto_intermedio">Guardar punto intermedio</string>
    <string name="foto_result">recorrido_foto_path</string>
    <string name="location">location</string>
    <string name="codigo_estacionamiento">codigo_est</string>
    <string name="titulo">titulo</string>
    <string name="descripcion">descripcion</string>
    <string name="prompt_comentario">Ingrese su comentario</string>
    <string name="facebook_app_id">102092943497466</string>
    <string name="ver_comentarios">Ver comentarios</string>

    <string name="listado_option">Listado de puntos de interés</string>
    <string name="title_puntointermedio_list">Puntos Intermedios</string>
    <string name="title_puntointermedio_detail">Punto Intermedio Detail</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="titulo_notificacion">Mensaje desde el estacionamiento</string>

    <string name="no_recorrido">No hay un recorrido iniciado</string>
    <string name="no_puntos">No hay puntos intermedios para mostrar</string>
    <string name="titulo_ver_comentarios">Ver comentarios</string>
    <string name="titulo_aplicacion">Estacionamientos!</string>
    <string name="descripcion_aplicacion">Controle su estacionamiento</string>

    <string name="no_recorrido_para_notificaciones">No hay un recorrido iniciado para el cuál se puedan consultar notificaciones</string>

</resources>
