<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/nombreEstacionamiento"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:gravity="start|bottom"
        android:textColor="@color/common_signin_btn_dark_text_default"
        android:background="#151769"
        android:text="@string/app_name"
        style="@style/behindMenuItemTitle"/>

    <TextView
        android:id="@+id/descripcionEstacionamiento"
        android:src="@drawable/powered_by_google_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Informacion sobre el estacionamiento"
        android:scaleType="center"
        android:textColor="#000000"
        android:background="#ffffff"/>

    <TableLayout
        android:id="@+id/horarios"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <TableRow>
            <TextView
                android:layout_column="0"
                android:text="Vehiculo"
                android:padding="3dip" />
            <TextView
                android:text="Hora"
                android:layout_column="1"
                android:gravity="start"
                android:layout_marginLeft="12dip"
                android:padding="3dip" />
            <TextView
                android:text="Dia"
                android:layout_column="2"
                android:gravity="start"
                android:layout_marginLeft="12dip"
                android:padding="3dip" />
        </TableRow>
        <View
            android:layout_height="2dip"
            android:background="#FF909090"
            android:layout_width="4dp"/>

    </TableLayout>

    <RatingBar
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:isIndicator="false"
        android:padding="16dp"
        style="?android:attr/ratingBarStyleIndicator" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/comentarios"
        android:text="@string/ver_comentarios"
        android:textColor="@color/colorPrimaryDark"
        android:background="?android:attr/selectableItemBackground"
        android:layout_centerVertical="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_comentario"
            android:visibility="gone"/>

    </android.support.design.widget.TextInputLayout>
</LinearLayout>