<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="obligatorio.ort.obligatorio.IngresarPuntoIntermedioActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/iniciar_recorrido_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/guardar_punto_intermedio_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/recorrido_codigo_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_titulo"
                    android:allowUndo="true"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_descripcion"
                    android:allowUndo="true"
                    android:inputType="text"
                    android:maxLines="2"
                    android:singleLine="false" />

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_button"
                android:id="@+id/imageButton" />

            <Button
                android:id="@+id/guardar_punto_intermedio"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/common_signin_btn_dark_text_default"
                android:background="@color/common_signin_btn_default_background"
                android:layout_marginTop="16dp"
                android:text="@string/guardar_punto_intermedio"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
